[Project] Home page alignment. - Updated css to fix alignment.
Fixed:
https://simtk.org/tracker/index.php?func=detail&aid=3241&group_id=11&atid=1960

--- a/fusionforge/www/themes/simtk/css/theme.css
+++ b/fusionforge/www/themes/simtk/css/theme.css
@@ -7304,6 +7304,9 @@ and open the template in the editor.
   padding-left: 15px;
   padding-right: 15px;
 }
+
+
+
 @media (min-width: 768px) {
   .two_third_col {
     float: left;
@@ -8863,8 +8866,8 @@ a.share_text_link {
   margin-right: 10px;
 }
 .related_thumb img {
-  max-width: 86px; !important;
-  max-height: 86px; !important;
+  max-width: 86px !important;
+  max-height: 86px !important;
   width: 86px;
   height: 86px;
 }
@@ -8879,7 +8882,7 @@ a.share_text_link {
   margin: 0;
 }
 .three_cols {
-  margin-left: -15px;
+  margin-left: 0px;
   margin-right: -15px;
   /*
   overflow-wrap: break-word !important;
@@ -9225,7 +9228,6 @@ Working with project HOME
 .three_cols > .one_third_col {
   padding-left: 0px;
 }
-
 /* 
     Created on : Nov 13, 2014, 8:50:50 PM
     Author     : dmitry
@@ -10560,7 +10562,7 @@ h3.underlined {
   padding: 0 !important;
 }
 .news_representation a:link,
-.news_representation a:visited, {
+.news_representation a:visited {
   color: #428bca !important;
 }
 .news_representation a:hover,
